change with arrow on banner to fix heroku issues on iphone

--- a/app/assets/stylesheets/components/_photo-accueil.scss
+++ b/app/assets/stylesheets/components/_photo-accueil.scss
@@ -67,5 +67,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 70vh;
+  position: absolute;
+  top: +85%; left: 50%;
+  transform: translate(-50%, -50%);
 }
